# SekaiTemplate

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/: main.cpp
src/scences/: CMakeLists.txt  entry_scence.cpp  entry_scence.h
